docs/tests/nameres/expressions/valid/TypeCast.src
// Valid

let int a = 4; 
let float b = a as float;