docs/tests/nameres/expressions/invalid/TypeCastNoAssign.src
// Invalid

let int a = 4;
a as float;